# invoice-payment-reconciliation-automation

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  REQ.md  RUNBOOK.md  SECURITY.md  STATE.md  TDD.md  pyproject.toml
.github/workflows/: ci.yml
.manual-validation/phase6-csv/: reconciliation-details.csv  reconciliation-summary.csv
docs/demo-output/: README.md
docs/demo-output/mixed-demo/: reconciliation-report.md  reconciliation-workbook.xlsx
docs/screenshots/: README.md
sample-data/: README.md  demo-mixed-invoices.csv  demo-mixed-invoices.xlsx  demo-mixed-payments.csv  invalid-invoices.csv  invalid-payments.csv  valid-invoices.csv  valid-payments.csv
sample-data/mixed-demo/: payments.xlsx
src/invoice_reconciliation/: __init__.py  cli.py  ingestion.py  matching.py  models.py  reporting.py
tests/: conftest.py  test_cli.py  test_ingestion.py  test_matching.py  test_reporting.py  test_sample_data.py
