[project]
name = "invoice-payment-reconciliation-automation-new"
version = "0.1.0"
description = "CLI-first invoice and payment reconciliation automation demo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
reconcile = "invoice_reconciliation.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invoice_reconciliation"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
line-ending = "lf"
